edited stream test imports