@@ -1,6 +1,5 @@
 package objektwerks;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -14,7 +13,7 @@ class StreamTest {
 				.map(i -> i + 1)
 				.filter(i -> i % 2 == 0)
 				.collect(Collectors.toList());
-		assert(list.equals(Arrays.asList(2, 4)));
+		assert(list.equals(List.of(2, 4)));
 	}
 
 	@Test void listTest() {
